# jisho-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
jisho-api/: util.py
jisho/kanji/: request.py
jisho/sentence/: cfg.py  request.py
jisho/word/: cfg.py  request.py
jisho_api/: __init__.py  cli.py  util.py
jisho_api/kanji/: __init__.py  cfg.py  request.py
jisho_api/sentence/: __init__.py  cfg.py  request.py
jisho_api/tokenize/: __init__.py  cfg.py  request.py
jisho_api/word/: __init__.py  cfg.py  request.py
tests/: test_simple.py  test_tokenize.py
