[tool.poetry]
name = "jisho_api"
version = "0.1.8"
description = "A jisho.org API and scraper in Python."
license = "Apache-2.0"
readme = "README.md"
authors = ["pedro <pedroallenrevez@gmail.com>"]
homepage = "https://github.com/pedroallenrevez/jisho-api"
repository = "https://github.com/pedroallenrevez/jisho-api"
keywords = ["jisho", "japanese", "api", "scraper", "kanji", "python"]

[tool.poetry.scripts]
jisho = "jisho_api.cli:make_cli"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^8.0.1"
pydantic = "^1.8.2"
requests = "^2.26.0"
rich = "^10.11.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tatoebatools = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"

